--- a/.github/workflows/line_and_test.yml
+++ b/.github/workflows/line_and_test.yml
@@ -3,41 +3,49 @@ name: Lint & Test
 on:
   workflow_dispatch: # allows manual trigger
   push: 
-    branches-ignore:
-      - main
-      - beta
-      - alpha
+    branches:
+      - '!main'
+      - '!beta'
+      - '!alpha'
   pull_request:
-    types: [opened,reopened,synchronize]
-    branches-ignore:
-      - main
-      - beta
-      - alpha
+    # types: 
+    #   - opened
+    #   - reopened
+    #   - synchronize
+    # branches:
+    #   - 'update-dependencies**'
 jobs:
-  test: 
-    name: 'Node.js v${{ matrix.node }}'
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node:
-          - 14
-          - 16
-          - 18
     steps:
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '${{ matrix.node }}'
-      - uses: actions/checkout@v2
-      - name: 'Cache node_modules'
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-v${{ matrix.node }}-
-      - name: Install dependencies
-        run: npm ci
-      - name: Run linters
-        run: npm run lint
-      - name: Run tests
-        run: npm run coverage
+    - uses: hmarr/debug-action@v2
+  # test: 
+  #   name: 'Node.js v${{ matrix.node }}'
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  #   strategy:
+  #     matrix:
+  #       node:
+  #         - 14
+  #         - 16
+  #         - 18
+  #   steps:
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: '${{ matrix.node }}'
+  #     - uses: actions/checkout@v2
+  #     - name: 'Cache node_modules'
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: ~/.npm
+  #         key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-node-v${{ matrix.node }}-
+  #     - name: Install dependencies
+  #       run: npm ci
+  #     - name: Run linters
+  #       run: npm run lint
+  #     - name: Run tests
+  #       run: npm run coverage
