--- a/.github/workflows/line_and_test.yml
+++ b/.github/workflows/line_and_test.yml
@@ -2,50 +2,44 @@ name: Lint & Test
 
 on:
   workflow_dispatch: # allows manual trigger
-  push: 
+  push: # only triggers on push events from non-stable branches
     branches:
       - '!main'
       - '!beta'
       - '!alpha'
   pull_request:
-    # types: 
-    #   - opened
-    #   - reopened
-    #   - synchronize
-    # branches:
-    #   - 'update-dependencies**'
+    branches:
+      - main # only works on PRs with base_ref=main and follows limits below
+
 jobs:
-  build:
+  test: 
+    name: 'Node.js v${{ matrix.node }}'
     runs-on: ubuntu-latest
+    if: (github.event_name == 'pull_request' && startsWith(github.head_ref,'update-dependencies-') && github.base_ref == 'main') || github.event_name == 'workflow_dispatch' || github.event_name == 'push'
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    strategy:
+      matrix:
+        node:
+          - 14
+          - 16
+          - 18
     steps:
-    - uses: hmarr/debug-action@v2
-  # test: 
-  #   name: 'Node.js v${{ matrix.node }}'
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  #   strategy:
-  #     matrix:
-  #       node:
-  #         - 14
-  #         - 16
-  #         - 18
-  #   steps:
-  #     - uses: actions/setup-node@v2
-  #       with:
-  #         node-version: '${{ matrix.node }}'
-  #     - uses: actions/checkout@v2
-  #     - name: 'Cache node_modules'
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.npm
-  #         key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-node-v${{ matrix.node }}-
-  #     - name: Install dependencies
-  #       run: npm ci
-  #     - name: Run linters
-  #       run: npm run lint
-  #     - name: Run tests
-  #       run: npm run coverage
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '${{ matrix.node }}'
+      - uses: actions/checkout@v2
+      - name: 'Cache node_modules'
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-v${{ matrix.node }}-
+      - name: Install dependencies
+        run: npm ci
+      - name: Run linters
+        run: npm run lint
+      - name: Run tests
+        run: npm run coverage
